SERVER-39762 Fix fastcount after rollback recovery of prepared transactions