src/mongo/db/repl/rollback_impl.cpp
@@ -632,6 +632,15 @@ Status RollbackImpl::_processRollbackOp(const OplogEntry& oplogEntry) {
 
     // For applyOps entries, we process each sub-operation individually.
     if (oplogEntry.getCommandType() == OplogEntry::CommandType::kApplyOps) {
+        if (oplogEntry.getPrepare()) {
+            // Uncommitted prepared transactions are always aborted before rollback begins, which
+            // rolls back collection counts. Processing the operation here would result in
+            // double-counting the sub-operations when correcting collection counts later.
+            // Additionally, this logic makes an assumption that transactions are only ever
+            // committed when the prepare operation is majority committed. This implies that when a
+            // prepare oplog entry is rolled-back, it is guaranteed that it has never committed.
+            return Status::OK();
+        }
         try {
             auto subOps = ApplyOps::extractOperations(oplogEntry);
             for (auto& subOp : subOps) {
